# dionysus

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  class_index.html  docker-compose.yml  function_index.html  index.html  manage_py.html  pyproject.toml  run-coverage.sh  run-test.sh  show-coverage.sh  status.json  swagger.yml  z_0a3bd1d143ecceaf_0001_initial_py.html  z_0a3bd1d143ecceaf_0002_video_link_video_link_type_py.html  z_0a3bd1d143ecceaf_0003_alter_video_file_py.html  z_0a3bd1d143ecceaf_0004_alter_video_link_py.html  z_0a3bd1d143ecceaf_0005_alter_thumbnail_web_url_py.html  z_0a3bd1d143ecceaf___init___py.html  z_10fae538ba4e8521___init___py.html  z_10fae538ba4e8521_apps_py.html  z_10fae538ba4e8521_urls_py.html  z_115d654287968100___init___py.html  z_115d654287968100_tag_admin_py.html  z_115d654287968100_tag_category_admin_py.html  z_115d654287968100_tag_counter_admin_py.html  z_115d654287968100_tag_user_counter_admin_py.html  z_14f0052b804cc35b___init___py.html  z_14f0052b804cc35b_apps_py.html  z_17772894e6f6512f___init___py.html  z_17772894e6f6512f_serializers_py.html  z_17772894e6f6512f_urls_py.html  z_17e46bb9de093c8b___init___py.html  z_17e46bb9de093c8b_test_bookmarking_sync_api_view_py.html  z_19fdb2530549ad75___init___py.html  (+161 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 버그-리포트.md  새로운-기능-추가.md
.github/workflows/: CI.yaml  build_alpha_image.yaml  build_prod_image.yaml  coverage_report.yaml  create_swagger_file.yaml
app/: main.py
dockerdev/postgres/: initial_setup.sql
environments/alpha/: Dockerfile  build.sh  start-webapp.sh
environments/dev/: Dockerfile  db_initial_setup.sql  start-webapp.sh
environments/production/: Dockerfile  build.sh
webapp/: .coverage  README_celery_logging.md  README_logging.md  webapp_console.sh
webapp/account/admin/: __init__.py  user_tag_counter_admin.py
webapp/account/migrations/: 0001_initial.py  (+2 more)
webapp/bookmark/: apps.py
webapp/config/: __init__.py  admin.py  asgi.py  celery.py  urls.py  wsgi.py
webapp/factories/: base.py
webapp/meme/: apps.py
webapp/tag/: apps.py
webapp/user/: apps.py
(+163 files in other folders)
