[tool.poetry]
name = "dionysus"
version = "0.1.0"
description = ""
authors = ["shinkeonkim <singun11@kookmin.ac.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"

[tool.poetry.dev-dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.9.3"
mypy = "^1.8.0"
autoflake = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
